# Learn2Clean

./: .appveyor.yml  .gitignore  .travis.yml  Makefile  README.md  mypy.ini  pyproject.toml  readme.rst  test.csv  tox.ini
Learn2Clean_V1/: .gitignore  AUTHORS.rst  LICENSE  readme.rst  tox.ini
Learn2Clean_V1/examples/: Learn2Clean-examples-gpsu.ipynb  Learn2Clean-examples-house.ipynb  Learn2Clean-examples-titanic.ipynb
Learn2Clean_V1/html/: .buildinfo  features.html  index.html  learn2clean.classification.html  learn2clean.consistency_checking.html  learn2clean.duplicate_detection.html  learn2clean.feature_selection.html  learn2clean.html  learn2clean.loading.html  learn2clean.outlier_detection.html  modules.html  search.html  searchindex.js
Learn2Clean_V1/python-package/: README.rst  requirements.txt  requirements_dev.txt
Learn2Clean_V1/save/: gpsu_discovered_constraints.tdda  gpsu_example_results.txt  gpsu_results.txt  house_discovered_patterns.txt  house_example1_patterns.txt  house_example2_results.txt  titanic_discovered_constraints.tdda  titanic_discovered_patterns.txt  titanic_example_patterns.txt
data/: README.md  crimes.csv
datasets/: googleplaystore.csv
datasets/house/: test.csv
docs/: Makefile  conf.py  contributing.rst  features.rst  index.rst  installation.rst  introduction.rst
examples/: Learn2Clean-examples-gpsu.ipynb  Learn2Clean-examples-house.ipynb  Learn2Clean-examples-titanic.ipynb
experiments/: README.md
experiments/configs/: config.yaml  config_debug.yaml
experiments/experiment/: my_experiment.py
experiments/sandbox/: inspect_dataset.py  inspect_hydra_config.py
experiments/tools/: create_df_table.py  data_profiler.py  instantiate_list.py  load_and_split_data.py  setup_wandb_run.py
experiments/tutorials/: 01_crimes_csv_dummy.py  01_titanic_csv_dummy.py  02_titanic_openml_dummy.py  03_titanic_benchmark.py  07_permutation_space.py  08_permutation_gymnasium_env.py  titanic_accuracy_reward.py
html/: authors.html  genindex.html  installation.html  learn2clean.clustering.html  learn2clean.imputation.html  learn2clean.normalization.html  learn2clean.qlearning.html  learn2clean.regression.html  objects.inv
html/.doctrees/: installation.doctree  learn2clean.consistency_checking.doctree  learn2clean.doctree  learn2clean.normalization.doctree  learn2clean.outlier_detection.doctree
html/_sources/: features.rst.txt  index.rst.txt  learn2clean.clustering.rst.txt  learn2clean.duplicate_detection.rst.txt  learn2clean.feature_selection.rst.txt
learn2clean/: __init__.py  requirements.txt  requirements_dev.txt  setup.py
learn2clean/classification/: classifier.py
learn2clean/clustering/: __init__.py
learn2clean/duplicate_detection/: __init__.py  duplicate_detector.py
learn2clean/feature_selection/: feature_selector.py
learn2clean/imputation/: __init__.py
learn2clean/qlearning/: __init__.py
learn2clean/regression/: __init__.py
python-package/: .coveragerc  README.rst  __init__.py  requirements.txt  requirements_dev.txt  setup.py
python-package/docs/: learn2clean.classification.rst  modules.rst
python-package/learn2clean/: README.rst  __init__.py
python-package/tests/: __init__.py
save/: gpsu_example_patterns.txt  house_discovered_constraints.tdda  house_example2_constraints.tdda  house_example2_patterns.txt  titanic_example_constraints.tdda  titanic_example_results.txt
src/learn2clean/: types.py
test/: test_learn2clean.py
tests/: test_environment.py  test_learn2clean.py  test_pandas.py
tests/actions/: test_data_frame_action.py  test_dummy_add.py
tests/config/: test_dataset_configs.py  test_distances_configs.py
tests/distance/: test_chi_squared.py  test_correlation_matrix.py  test_histogram_correlation.py  test_histogram_intersection.py  test_jensen_shannon.py  test_kullback-leibler.py  test_kurtosis.py  test_missingness.py  test_row_count.py  test_skewness.py  test_variance.py  test_wasserstein.py
(+326 files in other folders)
